Footer fixes
fixed footer jumping around
fixed footer covering up content

--- a/React-Frontend/src/index.css
+++ b/React-Frontend/src/index.css
@@ -7,6 +7,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
@@ -31,4 +32,8 @@ ul {
 
 .addForm{
   float:right;
+}
+
+.home{
+  min-height: calc(100vh - 20px);
 }
